@@ -1,4 +1,4 @@
-#	$NetBSD: special,v 1.83 2005/04/12 14:24:32 jwise Exp $
+#	$NetBSD: special,v 1.84 2005/04/17 23:12:40 lukem Exp $
 #	@(#)special	8.2 (Berkeley) 1/23/94
 #
 # Hand-crafted mtree specification for the dangerous files.
@@ -118,7 +118,6 @@
 ./etc/postfix/main.cf		type=file mode=0644 optional
 ./etc/postfix/master.cf		type=file mode=0644 optional
 ./etc/postfix/postfix-script	type=file mode=0555 optional
-./etc/postinstall		type=file mode=0555 optional
 ./etc/powerd			type=dir  mode=0755 optional
 ./etc/powerd/scripts		type=dir  mode=0755 optional
 ./etc/powerd/scripts/power_button type=file mode=0555 optional
